--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <body>
-    hola
+    <form id="saludar-form">
+      <label for="nombre">Nombre: </label>
+      <input type="text" id="nombre" />
+      <input type="submit" value="Saludar" id="sumar-button" />
+    </form>
     <div id="resultado-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
