Saludo por nombre y genero

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <form id="saludar-form">
       <label for="nombre">Nombre: </label>
       <input type="text" id="nombre" />
-      <input type="submit" value="Saludar" id="sumar-button" />
+      <label for="genero">Genero: </label>
+      <input type="text" id="genero" />
+      <input type="submit" value="Saludo" id="Saludo-button" />
     </form>
     <div id="resultado-div"></div>
 
