Saludo segun la edad agregado

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <input type="text" id="nombre" />
       <label for="genero">Genero: </label>
       <input type="text" id="genero" />
+      <label for="edad">Edad: </label>
+      <input type="text" id="edad" />
       <input type="submit" value="Saludo" id="Saludo-button" />
     </form>
     <div id="resultado-div"></div>
@@ -12,3 +14,4 @@
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
+
