Saludo en Ingles y Español Agregado

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <input type="text" id="genero" />
       <label for="edad">Edad: </label>
       <input type="text" id="edad" />
+      <label for="idioma">Idioma (ingles/español): </label>
+      <input type="text" id="idioma" />
       <input type="submit" value="Saludo" id="Saludo-button" />
     </form>
     <div id="resultado-div"></div>
