Test para probar el saludo de forma automatizada

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <form id="saludar-form">
       <label for="nombre">Nombre: </label>
       <input type="text" id="nombre" />
-      <label for="genero">Genero: </label>
+      <label for="genero">Genero (m/f): </label>
       <input type="text" id="genero" />
       <label for="edad">Edad: </label>
       <input type="text" id="edad" />
-      <label for="idioma">Idioma (ingles/español): </label>
+      <label for="idioma">Idioma (en/es): </label>
       <input type="text" id="idioma" />
       <input type="submit" value="Saludo" id="Saludo-button" />
     </form>
